# magia-sdk

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: picolibc.cmake  toolcahin_llvm.cmake  toolchain_gcc.cmake  utils.cmake
devices/: CMakeLists.txt
devices/magia_mesh/: CMakeLists.txt  trampoline_magiaMesh.c  trampoline_magiaMesh.h
devices/magia_mesh_2x2/: trampoline_magiaMesh.c
drivers/: CMakeLists.txt  driver.h
drivers/fsync32/: CMakeLists.txt
drivers/fsync32/include/: fsync32.h
drivers/fsync32/src/: fsync32.c
drivers/idma32/: CMakeLists.txt
drivers/idma32/include/: idma32.h
drivers/idma32/src/: idma32.c
drivers/magia_mesh/: CMakeLists.txt  config_magiaMesh.c  config_magiaMesh.h  offload_magiaMesh.c  offload_magiaMesh.h
drivers/magia_mesh/include/: addr_map.h
drivers/magia_mesh_2x2/: config_magiaMesh.c
drivers/magia_mesh_2x2/include/: addr_map.h
drivers/redmule16/: CMakeLists.txt
drivers/redmule16/include/: redmule16.h
drivers/redmule16/src/: redmule16.c
hal/: CMakeLists.txt
hal/inc/: device_api.h
hal/include/: fsync.h  idma.h  redmule.h
hal/src/: fsync.c  idma.c  redmule.c
targets/: CMakeLists.txt
targets/magia/: CMakeLists.txt  common.ldh  link.ld
targets/magia-2x2/: CMakeLists.txt
targets/magia-2x2/include/: magia_tile_utils.h  mesh.h  tile.h
targets/magia-2x2/include/addr_map/: tile_addr_map.h
targets/magia-2x2/include/regs/: tile_ctrl.h
targets/magia-2x2/include/utils/: magia_tile_utils.h  magia_utils.h  tinyprintf.h
targets/magia/include/addr_map/: mesh_addr_map.h  tile_addr_map.h
targets/magia/include/regs/: mesh_ctrl.h  tile_ctrl.h
targets/magia/include/utils/: magia_utils.h  tinyprintf.h
targets/magia/src/: crt0.S
tests/: CMakeLists.txt
tests/magia/: CMakeLists.txt
tests/magia-2x2/: CMakeLists.txt
tests/magia-2x2/mesh/: CMakeLists.txt
tests/magia-2x2/mesh/hello_world/: CMakeLists.txt
tests/magia-2x2/mesh/hello_world/include/: test.h
tests/magia-2x2/mesh/hello_world/src/: test.c
tests/magia-2x2/mesh/mesh_test/: CMakeLists.txt
tests/magia-2x2/mesh/mesh_test/include/: test.h
tests/magia-2x2/mesh/mesh_test/src/: test.c
tests/magia/magiaMesh/: CMakeLists.txt
tests/magia/magiaMesh/simpleOffload/: CMakeLists.txt
tests/magia/magiaMesh/simpleOffload/include/: test_host.h  test_mesh.h
tests/magia/magiaMesh/simpleOffload/src_host/: test_host.c
tests/magia/magiaMesh/simpleOffload/src_mesh/: test_mesh.c
tests/magia/mesh/: CMakeLists.txt
tests/magia/mesh/fsync/: CMakeLists.txt
tests/magia/mesh/fsync/include/: test.h
tests/magia/mesh/fsync/src/: test.c
tests/magia/mesh/hello_world/: CMakeLists.txt
tests/magia/mesh/mesh_test/: CMakeLists.txt
tests/magia/mesh/mesh_test/include/: test.h
tests/magia/mesh/mesh_test/src/: test.c
